<resources>
    <string name="app_name">Sandbox</string>

    <string name="main_page_multitouch">Multitouch</string>
    <string name="main_page_array">Array</string>
    <string name="main_page_springs">Springs</string>
    <string name="main_page_motion">Motion</string>

    <string name="home_list_item_status">Status: %s</string>

    <string name="character_status_alive">Alive</string>
    <string name="character_status_dead">Dead</string>
    <string name="character_status_unknown">Unknown</string>

    <string name="character_name_label">Name</string>
    <string name="character_status_label">Status</string>
    <string name="character_species_label">Species</string>
    <string name="character_type_label">Type</string>
    <string name="character_gender_label">Gender</string>
    <string name="character_location_label">Location</string>
    <string name="character_episodes_label">Episodes</string>

    <string name="array_item_next_label">Next</string>
    <string name="retry">Retry</string>

    <string name="error_generic">Error occurred</string>
    <string name="name_label">Name</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="done">Done</string>
    <string name="route_pagination">Pagination</string>
    <string name="route_pagination_description">Pagination with query params and REST interaction via kotlin coroutines</string>
    <string name="route_navigation">Navigation</string>
    <string name="route_navigation_description">Self-navigated fragment passing argument</string>
    <string name="route_other">Other</string>
    <string name="route_other_description">Other experiments</string>
    <string name="routes_label">Routes</string>
    <string name="route_camera">Camera</string>
    <string name="route_camera_description">Back camera preview</string>
    <string name="camera_permission_rationale_title">Camera permission grant required</string>
    <string name="camera_permission_rationale_message">For further usage please proceed to settings and grant camera permission.\nOtherwise you\'ll be thrown on previous screen.</string>
    <string name="open_app_settings_label">Go to settings</string>
    <string name="exit_label">Exit</string>
    <string name="route_sensors">Sensors</string>
    <string name="route_sensors_description">Reading sensor data</string>
    <string name="main_page_compose">Compose</string>
    <string name="compose_greeting">This is integrated compose view</string>
    <string name="compose_timer_label">You\'ve been staring at this page for %d seconds</string>
</resources>
