<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_200dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/colorPrimaryDark"
            app:expandedTitleGravity="bottom"
            app:expandedTitleTextAppearance="@style/AppTheme.ExpandedToolbarTitle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <io.sandbox.app.widget.KeyValuePairView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:keyText="@string/character_status_label" />

            <io.sandbox.app.widget.KeyValuePairView
                android:id="@+id/species"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:keyText="@string/character_species_label" />

            <io.sandbox.app.widget.KeyValuePairView
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:keyText="@string/character_gender_label" />

            <io.sandbox.app.widget.KeyValuePairView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:keyText="@string/character_location_label" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true">

                <io.sandbox.app.widget.CollapsingContainer
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/common_8dp"
                    app:headerText="@string/character_episodes_label">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/episodesList"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                </io.sandbox.app.widget.CollapsingContainer>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
